further property refactor