@@ -16,97 +16,143 @@
 
 package org.polypheny.db.protointerface.statements;
 
+import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
-
-import lombok.Getter;
-import lombok.Setter;
-import org.polypheny.db.PolyImplementation;
 import org.polypheny.db.algebra.type.AlgDataType;
-import org.polypheny.db.catalog.entity.logical.LogicalNamespace;
 import org.polypheny.db.languages.QueryLanguage;
+import org.polypheny.db.nodes.Node;
+import org.polypheny.db.processing.Processor;
+import org.polypheny.db.protointerface.PIStatementProperties;
 import org.polypheny.db.protointerface.PIClient;
+import org.polypheny.db.protointerface.ProtoInterfaceServiceException;
 import org.polypheny.db.protointerface.proto.ParameterMeta;
 import org.polypheny.db.protointerface.proto.StatementResult;
-import org.polypheny.db.protointerface.statementProcessing.StatementProcessor;
-import org.polypheny.db.protointerface.utils.PropertyUtils;
+import org.polypheny.db.protointerface.relational.RelationalMetaRetriever;
 import org.polypheny.db.transaction.Statement;
 import org.polypheny.db.transaction.Transaction;
 import org.polypheny.db.type.entity.PolyValue;
+import org.polypheny.db.util.Pair;
 
-public class PIPreparedIndexedStatement extends PIPreparedStatement {
+public class PIPreparedIndexedStatement extends PIStatement implements Signaturizable, PIStatementBatch {
 
-    @Getter
-    protected String query;
-    @Getter
-    protected Statement statement;
-    @Getter
-    @Setter
-    protected PolyImplementation<PolyValue> implementation;
+    protected Statement currentStatement;
+    protected boolean hasParametersSet;
 
 
-    public PIPreparedIndexedStatement(
-            int id,
-            PIClient client,
-            QueryLanguage language,
-            LogicalNamespace namespace,
-            String query ) {
-        super(
-                id, client, language, namespace
-        );
-        this.query = query;
+    protected PIPreparedIndexedStatement(Builder builder) {
+        super( builder );
+        this.hasParametersSet = false;
+    }
+
+    protected AlgDataType getParameterRowType() {
+        Transaction transaction = protoInterfaceClient.getCurrentOrCreateNewTransaction();
+        currentStatement = transaction.createStatement();
+        Processor queryProcessor = transaction.getProcessor( queryLanguage );
+        Node parsed = queryProcessor.parse( query ).get( 0 );
+        // It is important not to add default values for missing fields in insert statements. If we did this, the
+        // JDBC driver would expect more parameter fields than there actually are in the query.
+        Pair<Node, AlgDataType> validated = queryProcessor.validate( transaction, parsed, false );
+        return queryProcessor.getParameterRowType( validated.left );
     }
 
 
-    public List<Long> executeBatch( List<List<PolyValue>> valuesBatch) throws Exception {
+    public List<ParameterMeta> determineParameterMeta() {
+        AlgDataType parameterRowType = getParameterRowType();
+        return RelationalMetaRetriever.retrieveParameterMetas( parameterRowType );
+    }
+
+
+    private void setParameters( List<PolyValue> values ) {
+        long index = 0;
+        for ( PolyValue value : values ) {
+            if ( value != null ) {
+                currentStatement.getDataContext().addParameterValues( index++, null, List.of( value ) );
+            }
+        }
+        this.hasParametersSet = true;
+    }
+
+    public StatementResult execute( List<PolyValue> values ) throws Exception {
+        if ( currentStatement == null ) {
+            currentStatement = protoInterfaceClient.getCurrentOrCreateNewTransaction().createStatement();
+        }
+        setParameters( values );
+        return execute();
+    }
+
+
+    @Override
+    public StatementResult execute() throws Exception {
+        if ( currentStatement == null || !hasParametersSet ) {
+            throw new ProtoInterfaceServiceException( "Can't execute parameterized statement before preparation." );
+        }
+        return execute( currentStatement );
+    }
+
+
+    public List<Long> executeBatch(List<List<PolyValue>> valueLists) throws Exception {
         List<Long> updateCounts = new LinkedList<>();
-        synchronized ( client ) {
-            Transaction transaction;
-            if ( statement == null ) {
-                statement = client.getCurrentOrCreateNewTransaction().createStatement();
-            } else {
-                statement.getDataContext().resetParameterValues();
-            }
-            List<AlgDataType> types = valuesBatch.stream()
-                    .map(v -> v.get(0).getType())
-                    .map( v -> statement.getTransaction().getTypeFactory().createPolyType(v))
-                    .collect(Collectors.toList());
-            int i = 0;
-            for ( List<PolyValue> column : valuesBatch ) {
-                statement.getDataContext().addParameterValues( i, types.get( i++ ), column );
-            }
-            StatementProcessor.execute( this);
-            updateCounts.add(0L);
+        for (List<PolyValue> values : valueLists) {
+            updateCounts.add( execute(values).getScalar() );
         }
         return updateCounts;
     }
 
 
-    @SuppressWarnings("Duplicates")
-    public StatementResult execute( List<PolyValue> values, int fetchSize ) throws Exception {
-        synchronized ( client ) {
-            Transaction transaction;
-            if ( statement == null ) {
-                statement = client.getCurrentOrCreateNewTransaction().createStatement();
-            } else {
-                statement.getDataContext().resetParameterValues();
-            }
-            long index = 0;
-            for ( PolyValue value : values ) {
-                if ( value != null ) {
-                    AlgDataType algDataType = statement.getTransaction().getTypeFactory().createPolyType(value.getType());
-                    statement.getDataContext().addParameterValues( index++, algDataType, List.of( value ) );
-                }
-            }
-            StatementProcessor.execute( this );
-            return StatementProcessor.getResult( this, fetchSize );
+    @Override
+    public List<PIStatement> getStatements() {
+        return Collections.singletonList( this );
+    }
+
+
+    @Override
+    public int getBatchId() {
+        // As prepared statements implement tProtoInterfaceStatementBatch directly, thy don't have a separate batch id.
+        return statementId;
+    }
+
+    public static Builder newBuilder() {
+        return new Builder();
+    }
+
+
+    static class Builder extends PIStatement.Builder {
+
+        protected Builder() {
+            super();
+        }
+
+        public Builder setStatementId(int statementId) {
+            this.statementId = statementId;
+            return this;
+        }
+
+
+        public Builder setProtoInterfaceClient(PIClient protoInterfaceClient) {
+            this.protoInterfaceClient = protoInterfaceClient;
+            return this;
+        }
+
+
+        public Builder setQueryLanguage(QueryLanguage queryLanguage) {
+            this.queryLanguage = queryLanguage;
+            return this;
+        }
+
+        public Builder setQuery(String query) {
+            this.query = query;
+            return this;
+        }
+
+        public Builder setProperties(PIStatementProperties properties) {
+            this.properties = properties;
+            return this;
+        }
+
+        public PIPreparedIndexedStatement build() {
+            return new PIPreparedIndexedStatement(this);
         }
     }
 
-    @Override
-    public Transaction getTransaction() {
-        return statement.getTransaction();
-    }
 }
